crates/lang-parse/tests/snapshots/parser__parser_call positional args.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..38,
            statements: StatementList {
                span: 0..38,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..38,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: Attributes(
                            [],
                        ),
                        expr: Call(
                            Call {
                                span: 0..38,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                name: QualifiedName {
                                    span: 0..3,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    parts: [
                                        Identifier {
                                            span: 0..3,
                                            name: "foo",
                                        },
                                    ],
                                },
                                arguments: ArgumentList {
                                    span: 4..37,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [
                                                Whitespace(
                                                    Whitespace(
                                                        "\n        ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    arguments: [
                                        Unnamed(
                                            UnnamedArgument {
                                                span: 13..14,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 13..14,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 13..14,
                                                                value: 1,
                                                                raw: "1",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        Unnamed(
                                            UnnamedArgument {
                                                span: 16..37,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [
                                                            Comment(
                                                                Comment {
                                                                    span: 16..22,
                                                                    inner: SingleLine(
                                                                        "// foo",
                                                                    ),
                                                                },
                                                            ),
                                                            Whitespace(
                                                                Whitespace(
                                                                    "\n        ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                expr: Literal(
                                                    Literal {
                                                        span: 31..37,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [
                                                                    Whitespace(
                                                                        Whitespace(
                                                                            "\n    ",
                                                                        ),
                                                                    ),
                                                                ],
                                                            ),
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 31..32,
                                                                value: 2,
                                                                raw: "2",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
