crates/lang-parse/tests/snapshots/parser__parser_comment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..17,
            statements: StatementList {
                span: 0..17,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [
                    (
                        LocalAssignment(
                            LocalAssignment {
                                span: 0..5,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                attr: [],
                                id: Identifier {
                                    span: 0..1,
                                    name: "a",
                                },
                                ty: None,
                                expr: Literal(
                                    Literal {
                                        span: 4..5,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        literal: Integer(
                                            IntegerLiteral {
                                                span: 4..5,
                                                value: 1,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        TrailingExtras(
                            [
                                Whitespace(
                                    Whitespace(
                                        " ",
                                    ),
                                ),
                                Comment(
                                    Comment {
                                        span: 7..17,
                                        inner: SingleLine(
                                            "// comment",
                                        ),
                                    },
                                ),
                            ],
                        ),
                    ),
                ],
                tail: None,
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
