crates/lang-parse/tests/snapshots/parser__parser_const.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x11dbeb8b2a2bb280",
        output_hash: "0xf25f9c80442c61a7",
        tree: (
            span: (
                start: 0,
                end: 14,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 14,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Const((
                        span: (
                            start: 0,
                            end: 13,
                        ),
                        keyword_span: (
                            start: 0,
                            end: 5,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 14,
                            ),
                            lines: [],
                        ),
                        attr: ([]),
                        vis: None,
                        id: (
                            span: (
                                start: 6,
                                end: 9,
                            ),
                            name: "FOO",
                        ),
                        ty: None,
                        expr: Literal((
                            span: (
                                start: 12,
                                end: 13,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            literal: Integer((
                                span: (
                                    start: 12,
                                    end: 13,
                                ),
                                value: "1",
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
