crates/lang-parse/tests/snapshots/parser__parser_doc comment init.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..28,
            statements: StatementList {
                span: 0..28,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [
                    (
                        Init(
                            Init {
                                span: 0..28,
                                keyword_span: 20..24,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                doc: DocBlock {
                                    span: 0..20,
                                    lines: [
                                        "/// Doc comment",
                                    ],
                                },
                                attr: Attributes(
                                    [],
                                ),
                                parameters: ParameterList {
                                    span: 25..25,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    parameters: [],
                                },
                                body: Body {
                                    span: 26..28,
                                    statements: StatementList {
                                        span: 27..27,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        statements: [],
                                        tail: None,
                                    },
                                },
                            },
                        ),
                        TrailingExtras(
                            [],
                        ),
                    ),
                ],
                tail: None,
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
