crates/lang-parse/tests/snapshots/parser__parser_doc comment property.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xb7e33f03fd131d5",
        output_hash: "0x79e624b5704cb9f6",
        tree: (
            span: (
                start: 0,
                end: 31,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 31,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Property((
                        span: (
                            start: 0,
                            end: 30,
                        ),
                        keyword_span: (
                            start: 20,
                            end: 24,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 20,
                            ),
                            lines: [
                                "/// Doc comment",
                            ],
                        ),
                        attr: ([]),
                        id: (
                            span: (
                                start: 25,
                                end: 26,
                            ),
                            name: "a",
                        ),
                        ty: None,
                        value: Literal((
                            span: (
                                start: 29,
                                end: 30,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            literal: Integer((
                                span: (
                                    start: 29,
                                    end: 30,
                                ),
                                value: "1",
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
